--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,11 @@
         "pre-package-uninstall": [
             "Illuminate\\Foundation\\ComposerScripts::prePackageUninstall"
         ]
+    ,
+        "deploy": [
+            "@php artisan migrate --force",
+            "@php artisan storage:link || true"
+        ]
     },
     "extra": {
         "laravel": {
